--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body img>
 
     <div id="encabezado-container">
-        <div id="brillo"> ¿Aceptas ser mi San Valentín? 🐱💞</div>
+        <div id="brillo"> ¿Aceptas ser mi Valentín? 🐱💞</div>
     </div>
-   
+   <div class="general">
     <div class="galeria">
         <img src="img/1.jpg" >
         <img src="img/2.jpg" >
@@ -44,4 +44,5 @@
     <script src="script.js"></script>
     </div>
 </body>
+
 </html>
